tests/sema/fail/v3_fail_nonvoid_missing_return.ep
# COMPILE_FAIL_CONTAINS: function must return i64 on all paths

fun run(): i64 {
    if true {
        ret 1
    }
}

fun main(): void {
    exit(run())
}
